# Hatch-Registry

./: README.md  pyproject.toml  registry_updater.py  requirements  test_registry_updater.py
.github/workflows/: add_package.yml  add_repository.yml  release_registry.yml  validate_package.yml
data/: hatch_packages_registry.json
hatch-registry/tests/: run_tests.py  test_registry_updater.py
hatch_registry/: __init__.py  registry_cli.py  registry_core.py  registry_diff.py  registry_updater.py  registry_validator.py
hatch_registry/tests/: test_registry_updater.py
