[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hatch-registry"
version = "0.1.0"
description = "The registry manager of all the packages on Hatch!"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Hatch Team"}
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

dependencies = [
    "jsonschema>=4.0.0",
    "semver>=2.13.0",
    "packaging>=21.0"
]

[project.scripts]
hatch-registry = "hatch_registry.registry_cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/crackingshells/Hatch-Registry"
"Bug Tracker" = "https://github.com/crackingshells/Hatch-Registry/issues"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["hatch_registry"]